just turn the directions on and off instead of varying the degree.  lets see if that feels better.